# YahtzeeOop

./: CMakeLists.txt  README.md  UI_YahtzeeUI.h  Yahtzee.icns  YahtzeeUiSetup.h  dice.cpp  dice.h  main.cpp  ui_widgetwindow.h  ui_widgetwindowOriginal.h  widgetwindow.ui  yahtzeeGame.cpp  yahtzeeGame.h  yahtzeeUI.cpp  yahtzeeUI.h
